<resources>
    <string name="app_name">thietkegiaodien</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="facebook_app_id">3578039345631668</string>
    <string name="fb_login_protocol_scheme">fb3578039345631668</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert">Insert</string>
    <string name="price">Price</string>
    <string name="operating_system">Operating system</string>
    <string name="name_phone">Name Phone</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="thongbao">Warning</string>
    <string name="do_you_want_to_delete_or_not">Do you want to delete or not?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="you_have_successfully_deleted">You have successfully deleted!</string>
    <string name="notification">Notification</string>

    <array name="courses">
        <item>IPhone</item>
        <item>SamSung</item>
        <item>Oppo</item>
        <item>Nokia</item>
        <item>Huawai</item>
        <item>BPhone</item>
        <item>Xiaomi</item>
        <item>VsMart</item>
        <item>Sony</item>
        <item>Vivo</item>
        <item>Reale</item>
        <item>Mobell</item>
        <item>Masstel</item>
        <item>Energizer</item>
        <item>Itel</item>
        <item>OnePlus</item>

    </array>
</resources>