<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="wrap_content"
    android:background="@drawable/anh2"
    android:layout_margin="15dp"
    >
    <TextView
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/pink"
        android:gravity="center"
        android:padding="20dp"
        android:text="Insert Categorys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_theloai"
        android:background="@drawable/edittext_bavkround"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:ems="10"
        android:padding="20dp"
        />


    <EditText
        android:id="@+id/editTextNamePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bavkround"
        android:ems="10"
        android:hint="@string/name_phone"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editTextOperatingsystem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bavkround"
        android:ems="10"
        android:hint="@string/operating_system"
        android:padding="20dp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bavkround"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_insert"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_backround"
        android:text="@string/insert"
        android:textSize="20sp"
        app:backgroundTint="@color/pink"
        android:textStyle="bold"
        android:textAllCaps="false"/>
</LinearLayout>